# wayland-log-reader

./: .gitignore  ArgumentItem.qml  CMakeLists.txt  ObjectLabel.qml  README.md  lodash.js  main.cpp  main.qml  qml.qrc  wayland-debug-tools.js  wayland-log-reader.qbs
